Fixed glass icon from shifting downwards

--- a/dev/styles/partials/_1-header.scss
+++ b/dev/styles/partials/_1-header.scss
@@ -80,7 +80,7 @@ label[for='slideIn'] {
     font-weight: bold;
     transition: all .5s cubic-bezier(.5, .2, .2, 1.2);
     &:hover {
-        top: 87%;
+        top: 79%;
         text-shadow: 0 0px 10px $thirdColour;
 
     }
